import "ApiResponse.proto";
import "ShopItem.proto";

message GetShopResponse{
	optional ApiResponse response = 1;//结果
	repeated ShopItem shopItems = 2;//商品列表
	optional int32 refreshPrice = 3;//下次刷新需要的货币数量
	optional int32 refreshPriceType = 4;//下次刷新需要的货币类型，按照TypeDefine
}